fixing alignment of add and remove label inputs

--- a/src/ui/app/instances/ek-label-editor/ek-label-editor.less
+++ b/src/ui/app/instances/ek-label-editor/ek-label-editor.less
@@ -14,11 +14,13 @@
     &__add--enabled {
         color: @grey450;
         cursor: pointer;
+        margin: 10px 0 0 0;
     }
 
     &__add--disabled {
         color: @grey200;
         cursor: default;
+        margin: 10px 0 0 0;
     }
 
 
@@ -38,6 +40,7 @@
         &__remove {
             color: @grey450;
             cursor: pointer;
+            margin: 10px 0 0 0;
         }
 
     }
